# python-scar_to_sarif

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml
scar_to_sarif/: __main__.py  cli.py  scar_to_sarif.py
test/: requirements.txt  test_fixtures.py
tests/: test_cli.py  test_fixtures.py  test_scar_to_sarif.py
tests/fixtures/: gcc.txt  some-report.sarif.json
