[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
skip-string-normalization = "True"
target-version = ["py38", "py39", "py310", "py311"]

[tool.setuptools.packages.find]
include = ["scar_to_sarif"]
exclude = ["test*", "sbom"]

[project]
name = "scar-to-sarif"
version = "2023.6.30"
description = "TBD"
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
]
